--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.7",
+    "@mui/material": "^5.14.7",
     "@next/eslint-plugin-next": "^13.4.19",
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
