--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^3.0.0",
+    "gsap": "^3.12.2",
     "next": "^13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
